# gx

./: .gitattributes  CMakeLists.txt  box.cpp  build-info.hpp.in  client.cpp  error.cpp  id.cpp  renderer.cpp  resources.cpp  scene.cpp  sprite.cpp  ui.cpp  ui_position.cpp
example/: CMakeLists.txt  bullet.aseprite  button.aseprite  cursor.aseprite  directed-cursor.aseprite  hero.aseprite  main.cpp  press-animation.aseprite  stone.aseprite  tree.aseprite
examples/: CMakeLists.txt
examples/01-renderer/: CMakeLists.txt  main.cpp
examples/99-full/: CMakeLists.txt  grass.aseprite  main.cpp
include/: gx.hpp
include/gx/: box.hpp  client.hpp  error.hpp  geometry.hpp  id.hpp  renderer.hpp  resources.hpp  scene.hpp  sprite.hpp  ui.hpp  ui_coordinate.hpp  ui_position.hpp
